This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

04-Nov-2009 (Zesstra)
  - Check types in restore_object().
    The types of restored variables are checked for compatibility with their
    type declaration if the objects program sets the pragma rtt_checks. If
    the types are not compatible, restore_object() will raise an error.
    (object.c)
  - Check types of members upon restoring structs.
    While restoring struct members, the types of the members are checked for
    compability with their declared types.
    (interpret.c, interpret.h, object.c)

03-Nov 2009 (Zesstra)
  - to_struct() converts a given struct into a struct with the same type as
    the template struct given as optional second argument.
    This conversion is only done if the template struct is a base of the given
    struct or vice versa. Otherwise an error is raised.
    (efuns.c)
  - Renamed baseof() to struct_baseof().
    That is much more consistent to the other funtions in structs.c.
    (structs.c, interpret.c, efuns.c)

02-Nov-2009 (Zesstra)
  - Split f_baseof() into f_baseof() and baseof(), because some parts of the
    interpreter need to know the relationship of two structs in the future.
    (structs.c)
  - Use shrink_array() only for alists.
    Intersecting empty arrays or mappings references the null_vector instead
    of creating a new empty array with shrink_array(vec,0). shrink_array is
    only used in intersect_ordered_arr().
    (array.c, mapping.c)
  - Allow structs being children of the declared one in RTT checks.
    check_rtt_compatibility() checked for identical types of structs. Instead
    it should check if the declared struct (the formal argument type) is a
    base of the given struct.
    Also use baseof() in check_struct_op().
    (interpret.c)

01-Nov-2009 (Zesstra)
  - Don't try to check arguments when calling lambdas.