@@ -40,12 +40,14 @@ DESCRIPTION
         rtt_checks: runtime checks during execution of this program will be
                 enabled. The interpreter will check for correct datatypes of
                 arguments on function calls. (Later it will include checks
-                of return values and upon upon assignments.)
-                Don't confuse this with strong/strict_types these two only
+                upon assignments.)
+                Don't confuse this with strong/strict_types, they only
                 check at compile time.
                 Without save_types this will not work properly, because there
-                will be no information about the types at runtime. Also
-                strong_types/strict_types is seriously recommended.
+                will be no information about the types of function arguments
+                at runtime. Also strong_types/strict_types is seriously
+                recommended.
+        no_rtt_checks: disable runtime type checks for this program (default).
 
         verbose_errors: upon a compilation error, the driver displays
                 the actual context of the errorenous text. This is
