@@ -73,8 +73,9 @@ xx-xxx-2009 (LDMud Team) -- 3.5.0
        + Added a sefun:: specifier to explicitly call simul-efuns. (#669)
        + structs are always enabled. (#557)
        + 'new' inline closure are always enabled. (#557)
-       + Added a new pragma 'rtt_checks', which will enable type checks at
-         runtime (experimental).
+       + Added two new pragmas:
+           'rtt_checks', which will enable type checks at runtime.
+           'no_rtt_checks', which disables runtime type checks.
        + A base struct is recorded as base struct in a child struct even if
          the base struct has no members. (#695)
 
